Refactors configuration values read from a YAML file.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ fibers = "0.1"
 fibers_http_server = "0.1"
 fibers_rpc = "0.2"
 fibers_tasque = "0.1"
+frugalos_core = { version = "0.1", path = "frugalos_core" }
 frugalos_config = { version = "0.3", path = "frugalos_config" }
 frugalos_mds = { version = "0.6", path = "frugalos_mds" }
 frugalos_raft = { version = "0.6", path = "frugalos_raft" }
@@ -52,4 +53,4 @@ url = "1"
 tempdir = "0.3"
 
 [workspace]
-members = ["frugalos_config", "frugalos_mds", "frugalos_raft", "frugalos_segment"]
+members = ["frugalos_core", "frugalos_config", "frugalos_mds", "frugalos_raft", "frugalos_segment"]
