it warns about unknown fields that are passed by --config-file option

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ slog = "2"
 sloggers = "0.3"
 serde = "1"
 serde_derive = "1"
+serde_ignored = "0.0.4"
 serde_yaml = "0.8"
 trackable = "^0.2.21"
 url = "1"
