--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,3 +58,6 @@ trackable = "^0.2.21"
 
 [workspace]
 members = ["frugalos_core", "frugalos_config", "frugalos_mds", "frugalos_raft", "frugalos_segment"]
+
+[patch.crates-io]
+raftlog = { path = "../raftlog" }
