Delegate object listing to DefaultCpuTaskQueue

--- a/frugalos_segment/Cargo.toml
+++ b/frugalos_segment/Cargo.toml
@@ -19,6 +19,7 @@ cannyls_rpc = "0.1"
 ecpool = "1"
 fibers = "0.1"
 fibers_rpc = "0.2"
+fibers_tasque = "0.1"
 frugalos_core = { version = "0.1", path = "../frugalos_core/" }
 frugalos_mds = { version = "0.6", path = "../frugalos_mds/" }
 frugalos_raft = { version = "0.6", path = "../frugalos_raft/" }
