--- a/frugalos_segment/Cargo.toml
+++ b/frugalos_segment/Cargo.toml
@@ -23,7 +23,7 @@ frugalos_core = { version = "0.1", path = "../frugalos_core/" }
 frugalos_mds = { version = "0.7", path = "../frugalos_mds/" }
 frugalos_raft = { version = "0.7", path = "../frugalos_raft/" }
 futures = "0.1"
-libfrugalos = "0.2"
+libfrugalos = { git = "https://github.com/frugalos/libfrugalos", branch = "fix/koba/evenly-distribute-segments" }
 prometrics = "0.1"
 rand = "0.5"
 raftlog = "0.4"
