--- a/frugalos_segment/Cargo.toml
+++ b/frugalos_segment/Cargo.toml
@@ -16,7 +16,7 @@ adler32 = "1"
 byteorder = { version = "1", features = ["i128"] }
 cannyls = "0.9"
 cannyls_rpc = "0.1"
-ecpool = "1"
+ecpool = { git = "https://github.com/frugalos/ecpool", branch = "tmp/liberasurecode-from-1.5.0-to-1.6.1" }
 fibers = "0.1"
 fibers_rpc = "0.2"
 frugalos_core = { version = "0.1", path = "../frugalos_core/" }
