Add git_ref build argument to frugalos-build
Now you can build a frugalos binary specifying the git branch or commit id.

--- a/docker/frugalos-build/Dockerfile
+++ b/docker/frugalos-build/Dockerfile
@@ -17,5 +17,7 @@ ENV PATH $PATH:/root/.cargo/bin
 ##
 ## Frugalosをビルド
 ##
-RUN git clone https://github.com/frugalos/frugalos.git
+## ビルド対象の git のブランチ/コミットIDを指定する
+ARG git_ref=master
+RUN git clone https://github.com/frugalos/frugalos.git && cd frugalos && git checkout $git_ref
 RUN cd frugalos && cargo build --release --all
