--- a/frugalos_config/Cargo.toml
+++ b/frugalos_config/Cargo.toml
@@ -20,7 +20,7 @@ fibers_rpc = "0.2"
 fibers_tasque = "0.1"
 frugalos_raft = { version = "0.7", path = "../frugalos_raft/" }
 futures = "0.1"
-libfrugalos = { git = "https://github.com/frugalos/libfrugalos", branch = "fix/koba/evenly-distribute-segments" }
+libfrugalos = "0.3"
 prometrics = "0.1"
 protobuf_codec = "0.2"
 raftlog = "0.4"
