--- a/frugalos_mds/Cargo.toml
+++ b/frugalos_mds/Cargo.toml
@@ -22,7 +22,7 @@ fibers_tasque = "0.1"
 frugalos_core = { version = "0.1", path = "../frugalos_core" }
 frugalos_raft = { version = "0.7", path = "../frugalos_raft/" }
 futures = "0.1"
-libfrugalos = { git = "https://github.com/frugalos/libfrugalos", branch = "fix/koba/evenly-distribute-segments" }
+libfrugalos = "0.3"
 patricia_tree = { version = "0.1.8", features = ["binary-format"] }
 prometrics = "0.1"
 protobuf_codec = "0.2"
