--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ jemalloc-ctl = "0.2"
 hostname = "0.1"
 httpcodec = "0.2"
 libfrugalos = "0.3.1"
+new_libfrugalos = { git = "http://github.com/frugalos/libfrugalos", package = "libfrugalos", branch = "feature/multiplicity-config" }
 num_cpus = "1"
 prometrics = "0.1"
 raftlog = "0.5"
