--- a/docker/frugalos-build/Dockerfile
+++ b/docker/frugalos-build/Dockerfile
@@ -1,7 +1,7 @@
 ##
 ## FrugalOSビルド用のベースイメージ
 ##
-FROM ringo/scientific:7.2
+FROM centos:7
 
 ## https://bugzilla.redhat.com/show_bug.cgi?id=210945#c8
 RUN echo %_netsharedpath /home >>/etc/rpm/macros
