--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,3 +58,13 @@ trackable = "^0.2.21"
 
 [workspace]
 members = ["frugalos_core", "frugalos_config", "frugalos_mds", "frugalos_raft", "frugalos_segment"]
+
+[patch.crates-io]
+# feature/disk-usage
+cannyls = { path = "../cannyls" }
+# feature/disk-usage
+cannyls_rpc = { path = "../cannyls_rpc" }
+# feature/disk-usage
+liberasurecode = { path = "../liberasurecode" }
+# feature/segment-stats
+libfrugalos = { path = "../libfrugalos" }
