Make leader_waiters_threshold configurable

--- a/frugalos_config/Cargo.toml
+++ b/frugalos_config/Cargo.toml
@@ -25,5 +25,7 @@ prometrics = "0.1"
 protobuf_codec = "0.2"
 raftlog = "0.6"
 rendezvous_hash = "0.3"
+serde = "1"
+serde_derive = "1"
 slog = "2"
 trackable = "0.2"
