--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ travis-ci = {repository = "frugalos/frugalos"}
 [dependencies]
 atomic_immut = "0.1"
 bytecodec = { version = "0.4", features = ["json_codec"] }
+byteorder = { version = "1", features = ["i128"] }
 cannyls = "0.9"
 cannyls_rpc = "0.1"
 clap = "2"
@@ -58,3 +59,6 @@ trackable = "^0.2.21"
 
 [workspace]
 members = ["frugalos_core", "frugalos_config", "frugalos_mds", "frugalos_raft", "frugalos_segment"]
+
+[patch.crates-io]
+libfrugalos = { path = "../libfrugalos" }
