--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,3 +59,7 @@ trackable = "^0.2.21"
 
 [workspace]
 members = ["frugalos_core", "frugalos_config", "frugalos_mds", "frugalos_raft", "frugalos_segment"]
+
+[patch.crates-io]
+cannyls = { git = "https://github.com/frugalos/cannyls", branch = "feature/handle-long-queue" }
+cannyls_rpc = { git = "https://github.com/frugalos/cannyls_rpc", branch = "feature/change-errorkind-in-cannyls" }
