--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ frugalos_mds = { version = "1.1", path = "frugalos_mds" }
 frugalos_raft = { version = "1.1", path = "frugalos_raft" }
 frugalos_segment = { version = "1.1", path = "frugalos_segment" }
 futures = "0.1"
+futures03 = { package = "futures", version = "0.3", features = ["compat"] }
 jemallocator = "0.1.8"
 jemalloc-ctl = "0.2"
 hostname = "0.1"
