--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,3 +65,4 @@ members = ["frugalos_core", "frugalos_config", "frugalos_mds", "frugalos_raft", 
 fibers = { git = "https://github.com/dwango/fibers-rs", branch = "tmp/tokio-1.0" }
 fibers_rpc = { git = "https://github.com/koba-e964/fibers_rpc", branch = "tmp/tokio-1.0" }
 fibers_http_server = { git = "https://github.com/koba-e964/fibers_http_server", branch = "tmp/tokio-1.0" }
+bytecodec = { git = "https://github.com/koba-e964/bytecodec", branch = "tmp/tokio-1.0" }
