--- a/frugalos_raft/Cargo.toml
+++ b/frugalos_raft/Cargo.toml
@@ -30,6 +30,8 @@ serde = "1"
 serde_derive = "1"
 slog = "2"
 trackable = "0.2"
+tokio = {version = "1.0", features = ["sync"]}
+futures03 = {package = "futures", version = "0.3", features = ["thread-pool", "compat"]}
 
 [dev-dependencies]
 fibers_global = "0.1"
