--- a/frugalos_config/Cargo.toml
+++ b/frugalos_config/Cargo.toml
@@ -30,3 +30,4 @@ serde = "1"
 serde_derive = "1"
 slog = "2"
 trackable = "0.2"
+futures03 = {package = "futures", version = "0.3", features = ["compat"]}
