--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ serde = "1"
 serde_derive = "1"
 serde_ignored = "0.0.4"
 serde_yaml = "0.8"
-trackable = "^0.2.21"
+trackable = "1"
 url = "1"
 
 [dev-dependencies]
@@ -56,7 +56,7 @@ url = "1"
 tempdir = "0.3"
 
 [build-dependencies]
-trackable = "^0.2.21"
+trackable = "1"
 
 [workspace]
 members = ["frugalos_core", "frugalos_config", "frugalos_mds", "frugalos_raft", "frugalos_segment"]
