--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,3 +60,6 @@ trackable = "^0.2.21"
 
 [workspace]
 members = ["frugalos_core", "frugalos_config", "frugalos_mds", "frugalos_raft", "frugalos_segment"]
+
+[patch.crates-io]
+raftlog = { git = "https://github.com/frugalos/raftlog", rev = "25d663" }
